--- a/OurLasalle/Pages/Index.cshtml
+++ b/OurLasalle/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LoginModel
+@model IndexModel
 @{
     ViewData["Title"] = "Login";
 }
@@ -8,12 +8,12 @@
 
 <form method="post">
     <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
+        <label asp-for="UserDto.Username"></label>
+        <input asp-for="UserDto.Username" />
     </div>
     <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" />
+        <label asp-for="UserDto.Password"></label>
+        <input asp-for="UserDto.Password" type="password" />
     </div>
     <button type="submit">Login</button>
     <div style="color: red">@Model.ErrorMessage</div>
