--- a/OurLasalle/Pages/Register.cshtml
+++ b/OurLasalle/Pages/Register.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@model IndexModel
+@model OurLasalle.Pages.RegisterModel
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Register";
 }
 
-<h2>Login</h2>
+<h2>Register</h2>
 
 <form method="post">
     <div>
@@ -15,10 +15,11 @@
         <label asp-for="UserDto.Password"></label>
         <input asp-for="UserDto.Password" type="password" />
     </div>
-    <button type="submit">Login</button>
+    <div>
+        <label asp-for="UserDto.Role"></label>
+        <select asp-for="UserDto.Role" asp-items="Model.Roles">
+        </select>
+    </div>
+    <button type="submit">Register</button>
     <div style="color: red">@Model.ErrorMessage</div>
 </form>
-
-<div>
-    <button onclick="location.href='@Url.Page("/Register")'">Register</button>
-</div>
