--- a/OurLasalle/Pages/User/Register.cshtml
+++ b/OurLasalle/Pages/User/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model OurLasalle.Pages.RegisterModel
+@model OurLasalle.Pages.User.RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
