--- a/OurLasalle/Pages/Home.cshtml
+++ b/OurLasalle/Pages/Home.cshtml
@@ -9,3 +9,4 @@
 <p>This is the home page after logging in.</p>
 
 <a href="/Courses/AllCourses">View Courses</a>
+<a href="/Grades/StudentGrades">View Grades</a>
